fix tooltip cropped in metadatas

--- a/src/app/styl/views/movie_detail.styl
+++ b/src/app/styl/views/movie_detail.styl
@@ -54,11 +54,9 @@
         font-smoothing: antialiased
     }
     .meta-container {
-        top: 10px
-        padding-top: 5px        
+        top: 10px     
         height: 18px
         position: relative
-        overflow: hidden
         .item {
             color: #FFF
             font-size: 12px
